# mandelbrot

./: Cargo.toml  README.md  flake.nix
mandelbrot/: Cargo.toml
mandelbrot/shader/shader/src/: lib.rs
mandelbrot/shader/shared/src/push_constants/: shader.rs
mandelbrot/src/: main.rs
mandelbrot/src/controller/: mod.rs
runner/: Cargo.toml  build.rs
runner/src/: big_complex.rs  big_vec2.rs  lib.rs
runner/src/controller/: keyboard.rs  mod.rs  touch.rs  ui.rs
shader/shader/src/: complex.rs  lib.rs  palette.rs  sdf.rs
shader/shared/: Cargo.toml
shader/shared/src/: complex.rs  lib.rs
shader/shared/src/push_constants/: mod.rs  shader.rs
wasm-app/: package-lock.json  package.json
