[workspace]
resolver = "2"
members = [
  "runner",
  "builder",
  "shader/shader",
]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/abel465/mandelbrot"

[workspace.dependencies]
bytemuck = { version = "1.22.0", default-features = false }
glam = { version = "0.29.3", default-features = false }

[workspace.dependencies.spirv-std]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "86fc48032c4cd4afb74f1d81ae859711d20386a1"

[workspace.dependencies.spirv-builder]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "86fc48032c4cd4afb74f1d81ae859711d20386a1"

[workspace.dependencies.easy-shader-runner]
git = "https://github.com/abel465/easy-shader-runner"
rev = "a9eed1b44f7a0a6bd49647910e27565fbab965c7"
default-features = false

[profile.dev]
package.spirv-tools-sys.opt-level = 1
