[workspace]
resolver = "3"
members = [
  "runner",
  "builder",
  "shader/shader",
]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/abel465/mandelbrot"

[workspace.dependencies]
bytemuck = { version = "1.22.0", default-features = false }
glam = { version = "0.30.5", default-features = false }

[workspace.dependencies.spirv-std]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "df1628a032d22c864397417c2871b74d602af986"

[workspace.dependencies.spirv-builder]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "df1628a032d22c864397417c2871b74d602af986"

[workspace.dependencies.easy-shader-runner]
git = "https://github.com/abel465/easy-shader-runner"
rev = "8f323c451c3a05d592ba6b2eba4f40bf117c2991"
default-features = false

[profile.dev]
package.spirv-tools-sys.opt-level = 1
